<resources>
    <string name="app_name">GhettoYelp</string>
    <string name="ghetto_yelp">Ghetto Yelp</string>
    <string name="create_review">Create Review</string>
    <string name="view_reviews">View Reviews</string>
    <string name="view_all_users">View All Users</string>
    <string name="add_remove_restaurants">Add/Remove\nRestaurants</string>
    <string name="welcome">Welcome!</string>
    <string name="add_review">Add Review</string>
    <string name="previous_reviews">Previous Reviews</string>
    <string name="logout">Logout</string>
    <string name="login_welcome">Welcome to Ghetto Yelp!\nPlease Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="logged_in">LOGGED IN</string>
    <string name="all_users">All Users</string>
    <string name="preference_file_key">ghettoYelpPreferenceFileKey</string>
    <string name="preference_userId_key">ghettoYelpPreferenceUserIdKey</string>
    <string name="reviews">reviews</string>
    <string name="all_previous_reviews">Previous Reviews</string>
    <string name="signup">Signup!</string>
    <string name="sign_up">Sign Up</string>
    <string name="review">Review</string>
    <string name="add_new_review">Add New Review</string>
    <string name="back">Back</string>
    <string name="manage_reviews">Manage Reviews</string>
    <string name="remove">Remove</string>
    <string name="view_all_reviews">View all Reviews</string>
    <string name="view_all_restaurants">View All Restaurants</string>
    <string name="add_restaurants">Add Restaurants</string>
</resources>