<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleLandingTextView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addReviewButton"
        android:layout_width="390dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_review"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLandingTextView" />

    <Button
        android:id="@+id/previousReviewsButton"
        android:layout_width="390dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:text="@string/previous_reviews"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addReviewButton" />
    <Button
        android:layout_width="390dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previousReviewsButton"
        android:text="@string/add_restaurants"
        android:textSize="32sp"
        android:id="@+id/add_remove_restaurants_button" />

    <Button
        android:id="@+id/viewAllRestaurants"
        android:layout_width="390dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_all_restaurants"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_remove_restaurants_button"
        android:visibility="gone"/>

    <Button
        android:layout_width="390dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAllRestaurants"
        android:text="@string/view_all_users"
        android:textSize="32sp"
        android:id="@+id/AdminViewAllUsersButton"
        android:visibility="gone"/>



    <Button
        android:id="@+id/logoutButton"
        android:layout_width="390dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminViewAllUsersButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>