<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ghetto_yelp"
        android:gravity="center"
        android:textSize="64sp"
        android:id="@+id/GhettoYelpTextView"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GhettoYelpTextView"
        android:text="@string/create_review"
        android:textSize="24sp"
        android:id="@+id/AdminCreateReviewButton"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminCreateReviewButton"
        android:text="@string/view_reviews"
        android:textSize="24sp"
        android:id="@+id/AdminViewReviewsButton"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminViewReviewsButton"
        android:text="@string/view_all_users"
        android:textSize="24sp"
        android:id="@+id/AdminViewAllUsersButton"/>

        <Button
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminViewAllUsersButton"
        android:text="@string/add_remove_restaurants"
        android:textSize="24sp"
        android:id="@+id/AdminAddRemoveRestaurantsButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>