<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/gray"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/usernameItemTextView"
                android:layout_width="102dp"
                android:layout_height="32dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/cardview_dark_background"
                android:padding="2dp"
                android:text="@string/username"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="102dp"
                android:layout_height="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/userViewsButton"
                app:layout_constraintStart_toEndOf="@id/usernameItemTextView"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/reviews"
                android:textSize="18sp"
                android:id="@+id/reviewsItemTextView" />

            <Button
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/userViewsButton"
                android:text="@string/view_reviews"
                android:textSize="18sp"
                android:backgroundTint="@color/dark_gray"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"
                android:layout_marginEnd="4dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>